--- a/k8s-dns-sidecar-amd64/Dockerfile
+++ b/k8s-dns-sidecar-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google-containers/k8s-dns-sidecar-amd64:V1.14.13
+FROM gcr.io/google-containers/k8s-dns-sidecar-amd64:v1.14.13
 MAINTAINER wymanwang
